modified README and removed unnecessary files

--- a/README
+++ b/README
@@ -17,8 +17,6 @@
     examples/ 実際に作ったメロディ    
 
 
-    adjacent-dist.hs: 単語の集まりから隣接するアルファベットの組み合わせの出現頻度を求める
-
-    dist-map.py: 隣接するアルファベットの組み合わせの出現頻度の分布から、よくある組み合わせは順次進行、あまりない組み合わせは跳躍分布になるようにアサインする
+    dist-map.py: 順次進行の割合がなるべく一定の値になるような割り当てを求める
 
     data/ 雑多なデータ
