--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-アルファベットの列でメロディを作りたい ver0.1 - @fumieval
+アルファベットの列でメロディを作りたい ver0.5 - @fumieval
 
 経緯
 
@@ -17,6 +17,6 @@
     examples/ 実際に作ったメロディ    
 
 
-    dist-map.py: 順次進行の割合がなるべく一定の値になるような割り当てを求める
+    dist-map.py: 順次進行の割合がなるべく一定の値になり、かつ主音で終わりその前が導音になりやすいような割り当てを求める
 
     data/ 雑多なデータ
