all programs are written in Haskell

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-アルファベットの列でメロディを作りたい ver0.5 - @fumieval
+アルファベットの列でメロディを作りたい ver0.6 - @fumieval
 
 経緯
 
@@ -14,9 +14,10 @@
 
     wordtomelody.hs: アルファベットの列から旋律を作る(要Haskore)
 
-    examples/ 実際に作ったメロディ    
+    examples/ 実際に作ったメロディ
 
 
-    dist-map.py: 順次進行の割合がなるべく一定の値になり、かつ主音で終わりその前が導音になりやすいような割り当てを求める
+    dist-map.hs: 順次進行の割合がなるべく一定の値になり、かつ主音で終わりその前が導音になりやすいような割り当てを求める
 
     data/ 雑多なデータ
+        words 割り当ての計算に使った単語
